# nix-sbom-docker

./: .gitignore  README.md  default.nix  flake.nix  sbom.cdx.json  sbom.csv  sbom.spdx.json
reports/reproducibility-20260610-200859/: RECOMPARE.txt  RESULTS.txt  python-app-bt-content-2.json  python-app-bt-norm-2.json  python-app-bt-strict-1.json  python-app-pb-content-1.json  python-app-pb-diff.txt  python-app-pb-norm-1.json  python-app-pb-norm-2.json  python-app-pb-strict-2.json  python-app-pbom-1.cdx.json  python-app-pbom-2.cdx.json  python-app-rt-content-2.json  python-app-rt-diff.txt  python-app-rt-norm-1.json  python-app-rt-norm-2.json  python-app-rt-strict-1.json  python-app-rt-strict-2.json  python-app-sbomnix-buildtime-1.cdx.json  python-app-sbomnix-buildtime-2.cdx.json  python-app-sbomnix-runtime-1.cdx.json  python-app-sbomnix-runtime-2.cdx.json
reports/reproducibility-20260610-201839/: RECOMPARE.txt  RESULTS.txt  node-app-bt-content-1.json  node-app-bt-norm-1.json  node-app-bt-strict-2.json  node-app-pb-content-2.json  node-app-pb-diff.txt  node-app-pb-norm-1.json  node-app-pb-norm-2.json  node-app-pb-strict-2.json  node-app-pbom-1.cdx.json  node-app-pbom-2.cdx.json  node-app-rt-content-2.json  node-app-rt-norm-1.json  node-app-rt-strict-1.json  node-app-sbomnix-buildtime-1.cdx.json  (+3 more)
scripts/: build-baseline.sh  build-nix.sh  compare.sh  demo.sh  oci-image-inserter.sh  reproducibility-recompare.sh  reproducibility-test.sh
tools/oci-sbom/: demo.sh  oci_sbom.py  pyproject.toml
tools/pbom-emitter/: pbom_emitter.py  pbom_summary.py  pyproject.toml
(+43 files in other folders)
