[project]
name = "pbom-emitter"
version = "0.1.0"
description = "Emit a CycloneDX PBOM (build-process bill of materials) from a Nix flake attr"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
]

[project.scripts]
pbom-emit = "pbom_emitter:main"

[tool.setuptools]
py-modules = ["pbom_emitter"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
